clean(core): Clean FileResource MediaType & Charset mess